--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
   <head>
     <meta charset="UTF-8">
     <title>Spencer's portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
+
   <body>
+    <header>
+      <h1>Spencer Croy</h1>
+    </header>
+
     <main>
-        <h1>Spencer portfolio</h1>  
+        <h1>Biography</h1>
+        <h1>Work Experience</h1>
+        <h1>Projects</h1>
     </main>
   </body>
 </html>
