--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   <body>
     <header>
       <h1>Spencer Croy</h1>
+      <ul>
+        <li><a href="#biography">Biography</a></li>
+        <li><a href="#work-experience">Work Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
     </header>
 
     <main>
-        <h1>Biography</h1>
-        <h1>Work Experience</h1>
-        <h1>Projects</h1>
+        <h1 id="biography">Biography</h1>
+        <h1 id="work-experience">Work Experience</h1>
+        <h1 id="projects">Projects</h1>
     </main>
   </body>
 </html>
