--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Spencer's portfolio</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
   <body>
     <header>
       <h1>Spencer Croy</h1>
-      <ul>
-        <li><a href="#biography">Biography</a></li>
-        <li><a href="#work-experience">Work Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-      </ul>
+      <div>
+        <ul>
+          <li><a href="#biography">Biography</a></li>
+          <li><a href="#work-experience">Work Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+        </ul>
+      </div>
     </header>
 
     <main>
