--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
   <body>
     <header>
       <h1>Spencer Croy</h1>
-      <div>
-        <ul>
-          <li><a href="#biography">Biography</a></li>
-          <li><a href="#work-experience">Work Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-        </ul>
-      </div>
+      <ul>
+        <li><a href="#biography">Biography</a></li>
+        <li><a href="#work-experience">Work Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
     </header>
 
     <main>
         <h1 id="biography">Biography</h1>
+        <p> 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
+        </p>
         <h1 id="work-experience">Work Experience</h1>
+        <p> 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
+        </p>
         <h1 id="projects">Projects</h1>
+        <p> 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
+        </p>
     </main>
   </body>
 </html>
