fixed nav section

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <body>
     <header>
       <h1>Spencer Croy</h1>
+    </header>
+
+    <nav>
       <ul>
         <li><a href="#biography">Biography</a></li>
         <li><a href="#work-experience">Work Experience</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
-    </header>
+    </nav>
 
     <main>
         <h1 id="biography">Biography</h1>
