change header links ot professional and add nav bar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 
   <header>
     <h1>Spencer Croy</h1>
-    <nav>
+    <div id="professional-links">
       <ul>
-        <li><a href="#biography">Biography</a></li>
-        <li><a href="#work-experience">Work Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="">Linkedin</a></li>
+        <li><a href="">Email</a></li>
+        <li><a href="">Github</a></li>
       </ul>
-    </nav>
-    
+    </div>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="#biography">Biography</a></li>
+      <li><a href="#work-experience">Work Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+  </nav>
 
   <body>
     <main>
