--- a/index.html
+++ b/index.html
@@ -24,23 +24,67 @@
       <li><a href="#biography">Biography</a></li>
       <li><a href="#work-experience">Work Experience</a></li>
       <li><a href="#projects">Projects</a></li>
-    </ul>
   </nav>
 
   <body>
-    <main>
-        <h1 id="biography">Biography</h1>
-        <p> 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
-        </p>
-        <h1 id="work-experience">Work Experience</h1>
-        <p> 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
-        </p>
-        <h1 id="projects">Projects</h1>
-        <p> 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
-        </p>
-    </main>
+    <section id="biography">
+      <h1>Biography</h1>
+      <p> 
+        Additive Manufacturing Engineer with over ten years experience in applying and developing 3D printing technologies. Deep understanding of 3D printer design, CAD, and CAM. Applied broad knowledge of materials, conventional manufacturing techniques, and software supporting production to integrate 3D printing into diverse production lines in the automotive, medical and consumer industries
+      </p>
+    </section>
+    <section id="work-experience">
+      <h1>Work Experience</h1>
+
+      <div class="job-description">
+        <h2 class="job-title">Software Quality Engineer</h2>
+        <h2 class="job-dates">2022-Present</h2>
+        <h2 class="job-company">uLab Systems</h2>
+        <ul>
+          <li>responsibility 1</li>
+          <li>responsibility 2</li>
+          <li>responsibility 3</li>
+        </ul>
+      </div>
+
+      <div class="job-description">
+        <h2 class="job-title">Application Engineer</h2>
+        <h2 class="job-dates">2019-2020</h2>
+        <h2 class="job-company">Markforged</h2>
+        <ul>
+          <li>responsibility 1</li>
+          <li>responsibility 2</li>
+          <li>responsibility 3</li>
+        </ul>
+      </div>
+
+      <div class="job-description">
+        <h2 class="job-title">Additive Manufacturing Engineer</h2>
+        <h2 class="job-dates">2015-2018</h2>
+        <h2 class="job-company">Earlens</h2>
+        <ul>
+          <li>responsibility 1</li>
+          <li>responsibility 2</li>
+          <li>responsibility 3</li>
+        </ul>
+      </div>
+
+      <div class="job-description">
+        <h2 class="job-title">Application Engineer</h2>
+        <h2 class="job-dates">2012-2015</h2>
+        <h2 class="job-company">Autodesk</h2>
+        <ul>
+          <li>responsibility 1</li>
+          <li>responsibility 2</li>
+          <li>responsibility 3</li>
+        </ul>
+      </div>
+    </section>
+    <section id="projects">
+      <h1>Projects</h1>
+      <p> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aut ipsa architecto maxime placeat, eum saepe officiis nostrum exercitationem, unde quia? Dolores voluptatem repellendus, eos sed iure cum eaque sapiente.
+      </p>
+    </section>
   </body>
 </html>
